--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="zxtZovdfuYB0t_ju9PC42x3MCsa9xf2yrf0lwdDmYb4" />
     <title>Ryuha Alliance</title>
     <link
   rel="stylesheet"
