added google tag

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,15 @@
     <meta name="twitter:title" content="Ryuha Alliance - United Warriors Community">
     <meta name="twitter:description" content="Join Ryuha Alliance, a legendary gathering of warriors, dreamers, and adventurers from all walks of anime fandom.">
     <meta name="twitter:image" content="https://ryuhaalliance.devsandbox.me/assets/cover.jpg">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y762JGWC4R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
     
+      gtag('config', 'G-Y762JGWC4R');
+    </script>
     <!-- Canonical URL -->
     <link rel="canonical" href="https://ryuhaalliance.devsandbox.me">
     <link
