--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,15 @@
     
       gtag('config', 'G-Y762JGWC4R');
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GFVLHQNX4Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GFVLHQNX4Y');
+</script>
     <!-- Canonical URL -->
     <link rel="canonical" href="https://ryuhaalliance.devsandbox.me">
     <link
