--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,15 @@
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Ryuha Alliance">
   <meta property="og:locale" content="en_US">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GFVLHQNX4Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-GFVLHQNX4Y');
+</script>
   <!-- Twitter Card Default Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Ryuha Alliance - United Warriors Community">
